# Keron

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  appveyor.yml  index.html  params.json  premake5.lua
client/: CMakeLists.txt  FlightCtrlState.cs  FlightCtrlStateToggles.cs
client/Connection/: ConnexionUtils.cs
client/UserInterface/: AKeronWindow.cs  ChatWindow.cs  ConnexionWindow.cs
client/initSave/: KeronMultiGame.sfs
client/messages/: Chat.cs  FlightCtrl.cs  Message.cs  NetID.cs  NetMessage.cs  Type.cs
client/server/: Configuration.cs
cmake/Libraries/ENetCS/: CMakeLists.txt
cmake/Libraries/ENetShared/: CMakeLists.txt
cmake/Libraries/FlatBuffersNet/: CMakeLists.txt
cmake/Modules/: CSProj.cmake
cmake/Templates/: Project.csproj.in
schemas/: CMakeLists.txt  flightctrlstate.fbs  messages.fbs  netmessages.fbs  server.fbs
scripts/: build.sh  client.sh  setup.bat  setup.sh
server/: CMakeLists.txt
server/include/: libenet.h  libvedis.h  signal_handlers.h  store.h
server/src/: server.cpp
server/src/os/: posix.cpp  windows.cpp
